--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1 style="text-align: center;background-color:greenyellow;padding: 20px 20px;font-size: 60px">PROUD to be Vegeterian!!! </h1>
     <p style="color: red; text-align: center;">In the contemporary world, people have become conscious about their health and taking the initiative of improving their diet. As a result, the aspect of vegetarianism has become very common. As a vegetarian, your diet will mainly constitute of plant foods.
     </p>    
-    <img id="img" src="images/veeg 1.jpg" alt="" width="300">
+    <img id="img" src="veeg 1.jpg" alt="" width="300">
     <nav>
         <a href="#">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="#">Login/SignUp</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
