--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         <li>Vegetarians have been shown to have a 24% lower risk of dying of heart disease than non-vegetarians</li>
         <li>Furthermore, world-renowned physician Dr. Dean Ornish found that patients on a low-fat vegetarian diet actually reversed coronary heart disease</li>
     </ul>
-    <img id="img2" src="images/veg 2.png" alt="" width="300">
+    <img id="img2" src="veg 2.png" alt="" width="300">
     <h3>Cancer prevention.</h3>
     <p style="text-align: initial;">Regularly consuming a diet that contains fruits and vegetables is strongly associated with a reduced risk of some cancers. There is evidence that vegetarians tend to have a lower overall rate of cancer compared to the general population. “Red meat and processed meat consumption is consistently associated with an increase in the risk of colorectal cancer". Reducing your risk of cancer is a great reason to eat your fruits and veggies!</p>
-    <img id="img3" src="images/veg4.jpg" alt="" width="300">
+    <img id="img3" src="veg4.jpg" alt="" width="300">
     <h3>Lose excess weight and keep it off.</h3>
     <p>On average, vegetarians tend to have a lower body mass index (a measure of body fat) than meat eaters. More than two-thirds (68.8%) of the general public are obese. 
     </p>
@@ -37,14 +37,14 @@
             <li>The Oxford Vegetarian Study found that BMI levels are lower in vegetarians of all age groups and for both men and women.</li>
             <li>Vegetarians may have lower BMI due to consumption of a diet that is high in fiber-rich and low-energy foods such as fruits and vegetables</li>
         </ul>
-        <img id="img4" src="images/veg 3.jpg" alt="" width="300">
+        <img id="img4" src="veg 3.jpg" alt="" width="300">
         <h3>Avoid toxic food contaminants.</h3>
         <p>Flesh foods can harbor contaminants such as hormones, herbicides and pesticides, and antibiotics. As these toxins are all fat-soluble, they concentrate in the fatty flesh of the animals. Not to mention the viruses, bacteria and parasites such as salmonella, trichinella and other worms, and toxoplasmosis parasites</p>
         
         <h3>Enjoy the diverse, colorful, and delicious world of vegetarian cuisine.</h3>
         <p> Vegetarian meals can be tasty, fast, and easy. Plus, you can make any of your favorite non-vegetarian dishes by substituting with ready-made meat alternatives. There are lots of vegetarian cook books available as well. The Down to Earth all-vegetarian Deli is perfect when you don’t have time to cook but don’t want to compromise on taste and quality.</p>
-        <img class="hhii" src="images/veg5.jpg"  alt="" width="49%">
-        <img class="hhii" src="images/veg6.jpg" alt="" width="49%">
+        <img class="hhii" src="veg5.jpg"  alt="" width="49%">
+        <img class="hhii" src="veg6.jpg" alt="" width="49%">
         <hr>
         <div class="pledge">
         <form action="">
